clusters/home/apps/security/pocket-id/saml-bridge/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: aws-sso-saml-bridge
  namespace: pocket-id
  annotations:
    external-dns.kubernetes.io/hostname: "aws-sso.layertwo.dev"
    external-dns.kubernetes.io/target: "proxy-external.layertwo.dev"
    layertwo.dev/publish: "all"
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    kubernetes.io/ingress.class: external
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`aws-sso.layertwo.dev`)
    kind: Rule
    services:
    - name: aws-sso-saml-bridge
      port: 8080
